<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosboard</name>
  <version>1.3.0</version>
  <description>ROSBoard</description>
  <maintainer email="dheera@dheera.net">dheera</maintainer>
  <license>BSD</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <depend>python3-tornado</depend>
  <depend>python3-simplejpeg-pip</depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
  </export>
</package>
